# gRNA-design

./: Makefile  README.md  Serialization.cpp  Serialization.h  Trie.cpp  Trie.h  build-trie.cpp  find-gRNAs.cpp  model.h
crunchr/: CMakeLists.txt  crunchr.c  desiguide.c
crunchr/src/: desiguide.c
crunchr/src/smalt/: .#sequence.h  sequence.c  sequence.h
trie/: Makefile  Model.h  Serialization.cpp  Trie.cpp  build-trie.cpp  find-gRNAs.cpp
